1999-10-31  Ben Elliston  <bje@cygnus.com>

	* configure: Regenerate.
	* aclocal.m4: Generate.
	* Makefile.in: Regenerate with Automake.
	* testsuite/Makefile.in: Likewise.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Use Automake.  Based on files from Ben Elliston.

	* acgeneral.m4: No longer define AC_ACVERSION, include
 	acversion.m4.
	* acversion.m4.in: New AC_CONFIG_FILE.
	* acspecific.m4: Few formating changes.
	* autoconf.texi: No longer define EDITION, VERSION and UPDATED:
	include version.texi.
	AC_OUTPUT the Makefiles mentioned below and acversion.m4.
	* configure.in: Use AM_INIT_AUTOMAKE.
 	Do not AC_ARG_PROGRAM: AM_INIT_AUTOMAKE does it.
	* Makefile.am: New file.
	* mdate-sh: Likewise.
	* missing: Likewise.
	* testsuite/Makefile.am: Likewise.

1999-10-31  Ben Elliston  <bje@cygnus.com>

	* acspecific.m4 (AC_PROG_CC_STDC, AC_C_PROTOTYPES): Inherit from
	Automake. From Franc,ois Pinard.
	* autoconf.texi (Particular Programs): Document AC_PROG_CC_STDC.
	(C Compiler Characteristics): Document AC_C_PROTOTYPES.

	* testsuite/autoconf.s/defines.exp: Changed `fail' and `pass' in
	`xfail' and `xpass'. The testsuite checks that acconfig.h
	templates the AC_DEFINEs. Since we no longer rely on acconfig.h,
	the test is obsolete.
	* acspecific.m4 (AC_PROG_BINSH, AC_PROG_SED): Don't quote the name
	of the macro defined; the testsuite does not recognize this
	syntax. From Akim Demaille <akim@epita.fr>.

1999-10-27  Ben Elliston  <bje@cygnus.com>

	* autoconf.texi (Generic Programs): @defmac for AC_PATH_TOOL may
	not span multiple lines.

1999-10-26  Ben Elliston  <bje@cygnus.com>

	* INSTALL: Regenerate.

1999-10-16  Ben Elliston  <bje@cygnus.com>

	* acspecific.m4 (AC_PROG_CXX): gcc is not a C++ compiler.
	* autoconf.texi (AC_PROG_CXX): Update documentation.

1999-10-13  Ben Elliston  <bje@cygnus.com>

	* acconfig.h: Reintroduce missing definitions due to testsuite
	regressions.

	* autoconf.texi (Configuration Headers): Document the potential